k8s/service-nginx.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    tier: backend
    app: nginx
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32380
      name: nginx
  selector:
    tier: backend
    app: nginx
  type: LoadBalancer
