k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumen-app
  namespace: default # it should "roadrunner" in real case
  labels:
    # For grouping and filtering 
    desc: testing_app
   
spec:
  type: NodePort
  selector:
    name: lumen-app
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
      # Target to Pod port
